--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Presentes</title>
 
-    <!-- ------------ CSS FILES ---------- -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -17,10 +15,10 @@
             <div class="links">
                 <ul>
                     <li>
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="./index.html" class="nav-link">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">About</a>
+                        <a href="./cozinha.html" class="nav-link">Cozinha</a>
                     </li>
                     <li>
                         <a href="#" class="nav-link">Services</a>
@@ -36,71 +34,11 @@
         </nav>
     </header>
 
-    <main>
-        <h2></h2>
-        <p></p>
-        <div class="pro-container">
-            <div class="pro">
-                <img src="./assets/img/1xg.png" alt="">
-                <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/1xg.png" alt="">
-                <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/1xg.png" alt="">
-                <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/1xg.png" alt="">
-                <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
-                </div>
-            </div>
-        </div>
-
-        <div class="pro-container">
-            <div class="pro">
-                <img src="./assets/img/1xg.png" alt="">
-                <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/1xg.png" alt="">
-                <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/1xg.png" alt="">
-                <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/1xg.png" alt="">
-                <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
-                </div>
-            </div>
+    <main class="main-content">
+        <div class="home-text">
+            <p>Querido convidado seja bem-vindo a nossa lista de presentes.</p>
+            <p>Pensamos em tudo com muito carinho para que você se sinta feliz para nos presentear com o que sentir vontade.</p>
         </div>
     </main>
-
-    <!-- JavaScript Files -->
-    <script src="./js/app.js"></script>
 </body>
 </html>
