Adicionando novas imagens e criando novas páginas

--- a/outros.html
+++ b/outros.html
@@ -21,7 +21,7 @@
                         <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilitários</a>
+                        <a href="#" class="nav-link">Services</a>
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
@@ -31,10 +31,28 @@
         </nav>
     </header>
 
-    <main class="main-content">
-        <div class="home-text">
-            <p>Querido convidado seja bem-vindo a nossa lista de presentes.</p>
-            <p>Pensamos em tudo com muito carinho para que você se sinta feliz para nos presentear com o que sentir vontade.</p>
+    <main>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="./assets/img/jogo-cama.png" alt="">
+                <div class="des">
+                    <h5>Jogo de Cama Lençol</h5>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="./assets/img/jogo-banho.png" alt="">
+                <div class="des">
+                    <h5>Jogo de Banho</h5>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="#" alt="">
+                <div class="des">
+                    <h5>Kit Colcha</h5>
+                </div>
+            </div>
         </div>
     </main>
 </body>
