alterando formatação da fonte e adicionando página

--- a/cozinha.html
+++ b/cozinha.html
@@ -20,16 +20,13 @@
                         <a href="./index.html" class="nav-link">Home</a>
                     </li>
                     <li>
-                        <a href="./cozinha.html" class="nav-link">Cozinha</a>
+                        <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Services</a>
+                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
                     </li>
                 </ul>             
             </div>
