--- a/outros.html
+++ b/outros.html
@@ -21,7 +21,7 @@
                         <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Services</a>
+                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
