--- a/index.html
+++ b/index.html
@@ -21,13 +21,10 @@
                         <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
+                        <a href="./utilitarios.html" class="nav-link">Utilitários</a>
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
-                    </li>
-                    <li>
-                        <a href="./outros.html" class="nav-link">Dados bancários</a>
                     </li>
                 </ul>             
             </div>
