--- a/eletroportateis.html
+++ b/eletroportateis.html
@@ -23,7 +23,7 @@
                         <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
+                        <a href="./utilitarios.html" class="nav-link">Utilitários</a>
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
@@ -45,7 +45,7 @@
             <div class="pro">
                 <img src="./assets/img/fritadeira.png" alt="">
                 <div class="des">
-                    <h5>Fritadeira</h5>
+                    <h5>Fritadeira Air-Frayer</h5>
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
             <div class="pro">
                 <img src="./assets/img/aspirador-po.png" alt="">
                 <div class="des">
-                    <h5>Aspirador de Pó Vertical</h5>
+                    <h5>Grill/Sanduicheira</h5>
                 </div>
             </div>
 
@@ -112,14 +112,14 @@
             <div class="pro">
                 <img src="./assets/img/forno-eletrico.png" alt="">
                 <div class="des">
-                    <h5>Forno Elétrico</h5>
+                    <h5>Purificador de Água</h5>
                 </div>
             </div>
 
             <div class="pro">
                 <img src="./assets/img/lavadora.png" alt="">
                 <div class="des">
-                    <h5>Lavadora - Lava e Seca</h5>
+                    <h5>Lavadora</h5>
                 </div>
             </div>
         </div>
