--- a/utilitarios.html
+++ b/utilitarios.html
@@ -21,7 +21,7 @@
                         <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
+                        <a href="./utilitarios.html" class="nav-link">Utilitários</a>
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
@@ -66,7 +66,7 @@
             <div class="pro">
                 <img src="./assets/img/conjunto-assadeiras.png" alt="">
                 <div class="des">
-                    <h5>Conjunto de Assadeiras</h5>
+                    <h5>Conjunto de Assadeiras de Vidro</h5>
                 </div>
             </div>
 
@@ -103,21 +103,21 @@
             <div class="pro">
                 <img src="./assets/img/garrafa-termica.png" alt="">
                 <div class="des">
-                    <h5>Jogo de Taças</h5>
+                    <h5>Garrafa Térmica de Café</h5>
                 </div>
             </div>
 
             <div class="pro">
-                <img src="#" alt="">
+                <img src="./assets/img/xicaras.png" alt="">
                 <div class="des">
-                    <h5>#</h5>
+                    <h5>Jogo Xícaras e Pires de Café</h5>
                 </div>
             </div>
 
             <div class="pro">
                 <img src="" alt="">
                 <div class="des">
-                    <h5>#</h5>
+                    <h5>Jogo de Taças para Vinho</h5>
                 </div>
             </div>
         </div>
