--- a/cozinha.html
+++ b/cozinha.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Presentes</title>
 
-    <!-- ------------ CSS FILES ---------- -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/8a122943d6.js" crossorigin="anonymous"></script>
+    <script src="./js/menu.js" defer></script>
 </head>
 <body>
     <header class="scrolled">
-        <nav class="container">
+        <nav class="container" id="nav">
             <a href="#"><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""></a>
             <div class="links">
+                <button id="btn-menu">
+                    <span id="hamburguer"></span>
+                </button>
                 <ul>
                     <li>
                         <a href="./index.html" class="nav-link">Home</a>
@@ -27,6 +30,9 @@
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
+                    </li>
+                    <li>
+                        <a href="./dados.html" class="nav-link">Dados bancários</a>
                     </li>
                 </ul>             
             </div>
@@ -97,7 +103,10 @@
         </div>
     </main>
 
-    <!-- JavaScript Files -->
-    <script src="./js/app.js"></script>
+    <footer>
+        <p>”Melhor é serem dois do que um. Porque, se um cair, o outro levanta o seu companheiro;</p>
+        <p>e o cordão de três dobras não se quebra facilmente”.</p>
+        <p>Eclesiastes <span style="font-size: 1.3rem;">4:9, 10 e 12</span></p>
+    </footer>
 </body>
 </html>
