--- a/eletroportateis.html
+++ b/eletroportateis.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Presentes</title>
 
-    <!-- ------------ CSS FILES ---------- -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/8a122943d6.js" crossorigin="anonymous"></script>
+    <script src="./js/menu.js" defer></script>
 </head>
 <body>
     <header class="scrolled">
-        <nav class="container">
+        <nav class="container" id="nav">
             <a href="#"><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""></a>
             <div class="links">
+                <button id="btn-menu">
+                    <span id="hamburguer"></span>
+                </button>
                 <ul>
                     <li>
                         <a href="./index.html" class="nav-link">Home</a>
@@ -23,10 +26,13 @@
                         <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilitários</a>
+                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
+                    </li>
+                    <li>
+                        <a href="./dados.html" class="nav-link">Dados bancários</a>
                     </li>
                 </ul>             
             </div>
@@ -45,7 +51,7 @@
             <div class="pro">
                 <img src="./assets/img/fritadeira.png" alt="">
                 <div class="des">
-                    <h5>Fritadeira Air-Frayer</h5>
+                    <h5>Fritadeira Air Fryer</h5>
                 </div>
             </div>
 
@@ -68,14 +74,14 @@
             <div class="pro">
                 <img src="./assets/img/aspirador-po.png" alt="">
                 <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
+                    <h5>Aspirador de Pó Vertical</h5>
                 </div>
             </div>
 
             <div class="pro">
                 <img src="./assets/img/panela-arroz.png" alt="">
                 <div class="des">
-                    <h5>Panela de Arroz</h5>
+                    <h5>Panela de Arroz Elétrica</h5>
                 </div>
             </div>
 
@@ -103,29 +109,62 @@
             </div>
 
             <div class="pro">
-                <img src="./assets/img/micro-ondas.png" alt="">
+                <img src="./assets/img/forno-micro-ondas.png" alt="">
                 <div class="des">
-                    <h5>Micro-ondas</h5>
+                    <h5>Forno Micro-ondas</h5>
                 </div>
             </div>
 
             <div class="pro">
                 <img src="./assets/img/forno-eletrico.png" alt="">
                 <div class="des">
-                    <h5>Purificador de Água</h5>
+                    <h5>Forno Elétrico</h5>
                 </div>
             </div>
 
             <div class="pro">
                 <img src="./assets/img/lavadora.png" alt="">
                 <div class="des">
-                    <h5>Lavadora</h5>
+                    <h5>Lavadora - Lava e Seca</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class="pro-container">
+            <div class="pro">
+                <img src="./assets/img/cafeteira.png" alt="">
+                <div class="des">
+                    <h5>Cafeteira de Cápsula</h5>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="./assets/img/mixer.png" alt="">
+                <div class="des">
+                    <h5>Mixer</h5>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="./assets/img/tv_1.png" alt="">
+                <div class="des">
+                    <h5>Smart Tv 50</h5>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="./assets/img/geladeira_2.png" alt="">
+                <div class="des">
+                    <h5>Geladeira Frost Free Inox</h5>
                 </div>
             </div>
         </div>
     </main>
 
-    <!-- JavaScript Files -->
-    <script src="./js/app.js"></script>
+    <footer>
+        <p>”Melhor é serem dois do que um. Porque, se um cair, o outro levanta o seu companheiro;</p>
+        <p>e o cordão de três dobras não se quebra facilmente”.</p>
+        <p>Eclesiastes <span style="font-size: 1.3rem;">4:9, 10 e 12</span></p>
+    </footer>
 </body>
 </html>
