--- a/outros.html
+++ b/outros.html
@@ -7,12 +7,17 @@
     <title>Lista de Presentes</title>
 
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/8a122943d6.js" crossorigin="anonymous"></script>
+    <script src="./js/menu.js" defer></script>
 </head>
 <body>
     <header class="scrolled">
-        <nav class="container">
+        <nav class="container" id="nav">
             <a href="#"><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""></a>
             <div class="links">
+                <button id="btn-menu">
+                    <span id="hamburguer"></span>
+                </button>
                 <ul>
                     <li>
                         <a href="./index.html" class="nav-link">Home</a>
@@ -21,17 +26,20 @@
                         <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Services</a>
+                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
+                    </li>
+                    <li>
+                        <a href="./dados.html" class="nav-link">Dados bancários</a>
                     </li>
                 </ul>             
             </div>
         </nav>
     </header>
 
-    <main>
+    <main style="height: 100vh">
         <div class="pro-container">
             <div class="pro">
                 <img src="./assets/img/jogo-cama.png" alt="">
@@ -48,12 +56,18 @@
             </div>
 
             <div class="pro">
-                <img src="#" alt="">
+                <img src="./assets/img/kit-colcha.png" alt="">
                 <div class="des">
                     <h5>Kit Colcha</h5>
                 </div>
             </div>
         </div>
     </main>
+
+    <footer>
+        <p>”Melhor é serem dois do que um. Porque, se um cair, o outro levanta o seu companheiro;</p>
+        <p>e o cordão de três dobras não se quebra facilmente”.</p>
+        <p>Eclesiastes <span style="font-size: 1.3rem;">4:9, 10 e 12</span></p>
+    </footer>
 </body>
 </html>
