--- a/utilitarios.html
+++ b/utilitarios.html
@@ -7,12 +7,17 @@
     <title>Lista de Presentes</title>
 
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/8a122943d6.js" crossorigin="anonymous"></script>
+    <script src="./js/menu.js" defer></script>
 </head>
 <body>
     <header class="scrolled">
-        <nav class="container">
+        <nav class="container" id="nav">
             <a href="#"><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""></a>
             <div class="links">
+                <button id="btn-menu">
+                    <span id="hamburguer"></span>
+                </button>
                 <ul>
                     <li>
                         <a href="./index.html" class="nav-link">Home</a>
@@ -21,10 +26,13 @@
                         <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
                     </li>
                     <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilitários</a>
+                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
                     </li>
                     <li>
                         <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
+                    </li>
+                    <li>
+                        <a href="./dados.html" class="nav-link">Dados bancários</a>
                     </li>
                 </ul>             
             </div>
@@ -85,7 +93,7 @@
             </div>
 
             <div class="pro">
-                <img src="#" alt="">
+                <img src="./assets/img/xicara-cha.png" alt="">
                 <div class="des">
                     <h5>Jogo de Xícaras de Chá</h5>
                 </div>
@@ -103,24 +111,39 @@
             <div class="pro">
                 <img src="./assets/img/garrafa-termica.png" alt="">
                 <div class="des">
-                    <h5>Garrafa Térmica de Café</h5>
+                    <h5>Garrafa Térmica De Café</h5>
                 </div>
             </div>
 
             <div class="pro">
                 <img src="./assets/img/xicaras.png" alt="">
                 <div class="des">
-                    <h5>Jogo Xícaras e Pires de Café</h5>
+                    <h5>Jogo Xícaras e Pires De Café</h5>
                 </div>
             </div>
 
             <div class="pro">
-                <img src="" alt="">
+                <img src="./assets/img/tacas-vinho.png" alt="">
                 <div class="des">
                     <h5>Jogo de Taças para Vinho</h5>
                 </div>
             </div>
         </div>
+
+        <div class="pro-container">
+            <div class="pro">
+                <img src="./assets/img/mesa.png" alt="">
+                <div class="des">
+                    <h5>Mesa De Jantar 4 Lugares</h5>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <p>”Melhor é serem dois do que um. Porque, se um cair, o outro levanta o seu companheiro;</p>
+        <p>e o cordão de três dobras não se quebra facilmente”.</p>
+        <p>Eclesiastes <span style="font-size: 1.3rem;">4:9, 10 e 12</span></p>
+    </footer>
 </body>
 </html>
