ajustando responsividade da página

--- a/outros.html
+++ b/outros.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <main style="height: 100vh">
+    <main>
         <div class="pro-container">
             <div class="pro">
                 <img src="./assets/img/jogo-cama.png" alt="">
