--- a/eletroportateis.html
+++ b/eletroportateis.html
@@ -13,75 +13,80 @@
 <body>
     <header class="scrolled">
         <nav class="container" id="nav">
-            <a href="#"><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""></a>
-            <div class="links">
-                <button id="btn-menu">
-                    <span id="hamburguer"></span>
-                </button>
-                <ul>
-                    <li>
-                        <a href="./index.html" class="nav-link">Home</a>
-                    </li>
-                    <li>
-                        <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
-                    </li>
-                    <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
-                    </li>
-                    <li>
-                        <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
-                    </li>
-                    <li>
-                        <a href="./dados.html" class="nav-link">Dados bancários</a>
-                    </li>
-                </ul>             
-            </div>
+          <a href="#"
+            ><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""
+          /></a>
+          <div class="links">
+            <button id="btn-menu">
+              <span id="hamburguer"></span>
+            </button>
+            <ul>
+              <li>
+                <a href="./index.html" class="nav-link">Home</a>
+              </li>
+              <li>
+                  <a href="./eletroportateis.html" class="nav-link">Eletrodomésticos</a>
+              </li>
+              <li>
+                <a href="./moveis.html" class="nav-link">Móveis</a>
+              </li>
+              <li>
+                <a href="./utilitarios.html" class="nav-link">Utilidades</a>
+              </li>
+              <li>
+                <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
+              </li>
+              <li>
+                <a href="./dados.html" class="nav-link">Dados bancários</a>
+              </li>
+            </ul>
+          </div>
         </nav>
-    </header>
+      </header>
 
     <main>
         <div class="pro-container">
             <div class="pro">
-                <img src="./assets/img/grill.png" alt="">
+                <img src="./assets/img/geladeira_2.png" alt="">
                 <div class="des">
-                    <h5>Grill/Sanduicheira</h5>
+                    <h5>Geladeira Frost Free Inox</h5>
                 </div>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/fritadeira.png" alt="">
+                <img src="./assets/img/tv_1.png" alt="">
                 <div class="des">
-                    <h5>Fritadeira Air Fryer</h5>
+                    <h5>Smart Tv 50</h5>
                 </div>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/panela-pressao.png" alt="">
+                <img src="./assets/img/forno-eletrico.png" alt="">
                 <div class="des">
-                    <h5>Panela de Pressão</h5>
+                    <h5>Forno Elétrico</h5>
                 </div>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/processador-alimentos.png" alt="">
+                <img src="./assets/img/depurador.png" alt="">
                 <div class="des">
-                    <h5>Processador de Alimentos</h5>
+                    <h5>Depurador Slim</h5>
                 </div>
             </div>
         </div>
 
         <div class="pro-container">
             <div class="pro">
-                <img src="./assets/img/aspirador-po.png" alt="">
+                <img src="./assets/img/lavadora.png" alt="">
                 <div class="des">
-                    <h5>Aspirador de Pó Vertical</h5>
+                    <h5>Lavadora - Lava e Seca</h5>
                 </div>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/panela-arroz.png" alt="">
+                <img src="./assets/img/micro-ondas.png" alt="">
                 <div class="des">
-                    <h5>Panela de Arroz Elétrica</h5>
+                    <h5>Forno Micro-ondas</h5>
                 </div>
             </div>
 
@@ -102,36 +107,6 @@
 
         <div class="pro-container">
             <div class="pro">
-                <img src="./assets/img/depurador.png" alt="">
-                <div class="des">
-                    <h5>Depurador Slim</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/forno-micro-ondas.png" alt="">
-                <div class="des">
-                    <h5>Forno Micro-ondas</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/forno-eletrico.png" alt="">
-                <div class="des">
-                    <h5>Forno Elétrico</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/lavadora.png" alt="">
-                <div class="des">
-                    <h5>Lavadora - Lava e Seca</h5>
-                </div>
-            </div>
-        </div>
-
-        <div class="pro-container">
-            <div class="pro">
                 <img src="./assets/img/cafeteira.png" alt="">
                 <div class="des">
                     <h5>Cafeteira de Cápsula</h5>
@@ -146,16 +121,46 @@
             </div>
 
             <div class="pro">
-                <img src="./assets/img/tv_1.png" alt="">
+                <img src="./assets/img/aspirador-po.png" alt="">
                 <div class="des">
-                    <h5>Smart Tv 50</h5>
+                    <h5>Aspirador De Pó Vertical</h5>
                 </div>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/geladeira_2.png" alt="">
+                <img src="./assets/img/fritadeira.png" alt="">
                 <div class="des">
-                    <h5>Geladeira Frost Free Inox</h5>
+                    <h5>Fritadeira Air Fryer</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class="pro-container">
+            <div class="pro">
+                <img src="./assets/img/panela-arroz.png" alt="">
+                <div class="des">
+                    <h5>Panela de Arroz Elétrica</h5>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="./assets/img/processador-alimentos.png" alt="">
+                <div class="des">
+                    <h5>Processador de Alimentos</h5>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="./assets/img/panela-pressao.png" alt="">
+                <div class="des">
+                    <h5>Panela de Pressão</h5>
+                </div>
+            </div>
+            
+            <div class="pro">
+                <img src="./assets/img/grill.png" alt="">
+                <div class="des">
+                    <h5>Grill/Sanduicheira</h5>
                 </div>
             </div>
         </div>
