--- a/moveis.html
+++ b/moveis.html
@@ -47,23 +47,16 @@
     <main id="main-outros">
         <div class="pro-container">
             <div class="pro">
-                <img src="./assets/img/jogo-cama.png" alt="">
+                <img src="./assets/img/mesa.png" alt="">
                 <div class="des">
-                    <h5>Jogo de Cama Lençol</h5>
+                    <h5>Mesa De Jantar 4 Lugares</h5>
                 </div>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/jogo-banho.png" alt="">
+                <img src="./assets/img/sofa.png" alt="">
                 <div class="des">
-                    <h5>Jogo de Banho</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/kit-colcha.png" alt="">
-                <div class="des">
-                    <h5>Kit Colcha</h5>
+                    <h5>Sofá Retrátil/Reclinável</h5>
                 </div>
             </div>
         </div>
@@ -74,5 +67,6 @@
         <p>e o cordão de três dobras não se quebra facilmente”.</p>
         <p>Eclesiastes <span style="font-size: 1.3rem;">4:9, 10 e 12</span></p>
     </footer>
+
 </body>
 </html>
