--- a/utilitarios.html
+++ b/utilitarios.html
@@ -13,31 +13,36 @@
 <body>
     <header class="scrolled">
         <nav class="container" id="nav">
-            <a href="#"><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""></a>
-            <div class="links">
-                <button id="btn-menu">
-                    <span id="hamburguer"></span>
-                </button>
-                <ul>
-                    <li>
-                        <a href="./index.html" class="nav-link">Home</a>
-                    </li>
-                    <li>
-                        <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
-                    </li>
-                    <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
-                    </li>
-                    <li>
-                        <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
-                    </li>
-                    <li>
-                        <a href="./dados.html" class="nav-link">Dados bancários</a>
-                    </li>
-                </ul>             
-            </div>
+          <a href="#"
+            ><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""
+          /></a>
+          <div class="links">
+            <button id="btn-menu">
+              <span id="hamburguer"></span>
+            </button>
+            <ul>
+              <li>
+                <a href="./index.html" class="nav-link">Home</a>
+              </li>
+              <li>
+                  <a href="./eletroportateis.html" class="nav-link">Eletrodomésticos</a>
+              </li>
+              <li>
+                <a href="./moveis.html" class="nav-link">Móveis</a>
+              </li>
+              <li>
+                <a href="./utilitarios.html" class="nav-link">Utilidades</a>
+              </li>
+              <li>
+                <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
+              </li>
+              <li>
+                <a href="./dados.html" class="nav-link">Dados bancários</a>
+              </li>
+            </ul>
+          </div>
         </nav>
-    </header>
+      </header>
 
     <main>
         <div class="pro-container">
@@ -130,14 +135,6 @@
             </div>
         </div>
 
-        <div class="pro-container">
-            <div class="pro">
-                <img src="./assets/img/mesa.png" alt="">
-                <div class="des">
-                    <h5>Mesa De Jantar 4 Lugares</h5>
-                </div>
-            </div>
-        </div>
     </main>
 
     <footer>
