--- a/dados.html
+++ b/dados.html
@@ -1,55 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Presentes</title>
 
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="https://kit.fontawesome.com/8a122943d6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/8a122943d6.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/menu.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header class="scrolled">
-        <nav class="container" id="nav">
-            <a href="#"><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""></a>
-            <div class="links">
-                <button id="btn-menu">
-                    <span id="hamburguer"></span>
-                </button>
-                <ul>
-                    <li>
-                        <a href="./index.html" class="nav-link">Home</a>
-                    </li>
-                    <li>
-                        <a href="./eletroportateis.html" class="nav-link">Eletroportáteis</a>
-                    </li>
-                    <li>
-                        <a href="./utilitarios.html" class="nav-link">Utilidades</a>
-                    </li>
-                    <li>
-                        <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
-                    </li>
-                    <li>
-                        <a href="./dados.html" class="nav-link">Dados bancários</a>
-                    </li>
-                </ul>             
-            </div>
-        </nav>
+      <nav class="container" id="nav">
+        <a href="#"
+          ><img class="logo-img" src="./assets/img/casamento-logo.png" alt=""
+        /></a>
+        <div class="links">
+          <button id="btn-menu">
+            <span id="hamburguer"></span>
+          </button>
+          <ul>
+            <li>
+              <a href="./index.html" class="nav-link">Home</a>
+            </li>
+            <li>
+              <a href="./eletroportateis.html" class="nav-link">Eletrodomésticos</a>
+            </li>
+            <li>
+                <a href="./moveis.html" class="nav-link">Móveis</a>
+              </li>
+            <li>
+              <a href="./utilitarios.html" class="nav-link">Utilidades</a>
+            </li>
+            <li>
+              <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
+            </li>
+            <li>
+              <a href="./dados.html" class="nav-link">Dados bancários</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <section style="height: 100vh">
-        <i id="pix" class="fa-brands fa-pix"></i>
-        <h2 id="pix-descricao">Pix: <span style="font-size: 2rem;">16 99415-0636</span></h2>
-        <h2 id="pix-descricao">Tamiris P. De Almeida</h2>
+      <i id="pix" class="fa-brands fa-pix"></i>
+      <h2 id="pix-descricao">
+        Pix: <span style="font-size: 2rem">16 99415-0636</span>
+      </h2>
+      <h2 id="pix-descricao">Tamiris P. De Almeida</h2>
     </section>
 
     <footer>
-        <p>”Melhor é serem dois do que um. Porque, se um cair, o outro levanta o seu companheiro;</p>
-        <p>e o cordão de três dobras não se quebra facilmente”.</p>
-        <p>Eclesiastes <span style="font-size: 1.3rem;">4:9, 10 e 12</span></p>
+      <p>
+        ”Melhor é serem dois do que um. Porque, se um cair, o outro levanta o
+        seu companheiro;
+      </p>
+      <p>e o cordão de três dobras não se quebra facilmente”.</p>
+      <p>Eclesiastes <span style="font-size: 1.3rem">4:9, 10 e 12</span></p>
     </footer>
-
-</body>
+  </body>
 </html>
