--- a/dados.html
+++ b/dados.html
@@ -50,7 +50,7 @@
     <section style="height: 100vh">
       <i id="pix" class="fa-brands fa-pix"></i>
       <h2 id="pix-descricao">
-        Pix: <span style="font-size: 2rem">16 99415-0636</span>
+        Pix: <span style="font-size: 2rem; color:black;">16 99415-0636</span>
       </h2>
       <h2 id="pix-descricao">Tamiris P. De Almeida</h2>
     </section>
