--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </p>
       </div>
 
-      <p>18 De Junho De 2022</p>
+      <p style="text-align: center;">18 De Junho De 2022</p>
     </main>
 
     <footer>
