--- a/outros.html
+++ b/outros.html
@@ -47,24 +47,30 @@
     <main id="main-outros">
         <div class="pro-container">
             <div class="pro">
-                <img src="./assets/img/jogo-cama.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Cama Lençol</h5>
-                </div>
+                <a href="https://www.zelo.com.br/jogo-de-cama-zelo-classic-queen-percal-180-fios-p999929?pp=/44.4701/" target="blank">
+                  <img src="./assets/img/jogo-cama.png" alt="">
+                  <div class="des">
+                      <h5>Jogo de Cama Lençol</h5>
+                  </div>
+                </a>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/jogo-banho.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Banho</h5>
-                </div>
+                <a href="https://www.zelo.com.br/jogo-de-banho-atlantica-soul-5-pecas-fio-penteado-p1002687?pp=/44.4572/" target="blank">
+                  <img src="./assets/img/jogo-banho.png" alt="">
+                  <div class="des">
+                      <h5>Jogo de Banho</h5>
+                  </div>
+                </a>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/kit-colcha.png" alt="">
-                <div class="des">
-                    <h5>Kit Colcha</h5>
-                </div>
+                <a href="https://artex.com.br/pr/kit-colcha-multi-mix-due/ARR30KCQZ7642?gclid=Cj0KCQjwvLOTBhCJARIsACVldV3fHt_ak0tTGHbrpS9iXu4h5EGakPKpIrWJ_GlpQkxma7teKk3e8tkaAhYbEALw_wcB">
+                  <img src="./assets/img/kit-colcha.png" alt="">
+                  <div class="des">
+                      <h5>Kit Colcha</h5>
+                  </div>
+                </a>
             </div>
         </div>
     </main>
