--- a/utilitarios.html
+++ b/utilitarios.html
@@ -47,91 +47,115 @@
     <main>
         <div class="pro-container">
             <div class="pro">
-                <img src="./assets/img/faqueiro.png" alt="">
-                <div class="des">
-                    <h5>Faqueiro</h5>
-                </div>
+                <a href="https://www.magazineluiza.com.br/faqueiro-tramontina-inox-laguna-66906-793-36-pecas/p/141022200/ud/faqu/" target="blank">
+                    <img src="./assets/img/faqueiro.png" alt="">
+                    <div class="des">
+                        <h5>Faqueiro</h5>
+                    </div>
+                </a>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/jogo-tacas.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Taças</h5>
-                </div>
+                <a href="https://www.magazinevoce.com.br/magazinetabugado2018/jogo-de-tacas-de-vidro-330ml-6-pecas-haus-bico-de-jaca-empire/p/142270300/UD/TAAG/" target="blank">
+                    <img src="./assets/img/jogo-tacas.png" alt="">
+                    <div class="des">
+                        <h5>Jogo de Taças</h5>
+                    </div>
+                </a>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/jogo-copos.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Copos</h5>
-                </div>
+                <a href="https://loja.nadir.com.br/jogo-de-copos-capri-nadir-410-ml-com-6-pecas?ff=7&fp=1678635&gclid=CjwKCAjw9qiTBhBbEiwAp-GE0edFe7B4HjtjxJ8k8GIti3Hrr8qKZ-gBhy_rM5YwGwEqpJZDsIlciBoCZ1kQAvD_BwE" target="blank">
+                    <img src="./assets/img/jogo-copos.png" alt="">
+                    <div class="des">
+                        <h5>Jogo de Copos</h5>
+                    </div>
+                </a>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/jogo-jarra-tacas.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Jarra e Taças</h5>
-                </div>
-            </div>
-        </div>
-
-        <div class="pro-container">
-            <div class="pro">
-                <img src="./assets/img/conjunto-assadeiras.png" alt="">
-                <div class="des">
-                    <h5>Conjunto de Assadeiras de Vidro</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/jogo-conjunto-de-assadeiras.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Assadeiras</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/jogo-sobremesa.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Sobremesas de Vidro</h5>
-                </div>
-            </div>
-
-            <div class="pro">
-                <img src="./assets/img/xicara-cha.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Xícaras de Chá</h5>
-                </div>
+                <a href="https://www.amazon.com.br/Jogo-Jarra-Ta%C3%A7as-Diamond-Escuro/dp/B09M6SRPNZ/ref=asc_df_B09M6SRPNZ/?tag=googleshopp00-20&linkCode=df0&hvadid=379685432142&hvpos=&hvnetw=g&hvrand=9770593994347475819&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001763&hvtargid=pla-1652416323775&psc=1" target="blank">
+                    <img src="./assets/img/jogo-jarra-tacas.png" alt="">
+                    <div class="des">
+                        <h5>Jogo de Jarra e Taças</h5>
+                    </div>
+                </a>
             </div>
         </div>
 
         <div class="pro-container">
             <div class="pro">
-                <img src="./assets/img/jogo-panelas.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Panelas</h5>
-                </div>
+                <a href="https://www.casasbahia.com.br/conjunto-de-assadeiras-refratarias-10-pecas-marinex-em-vidro-sodacal-14564626/p/14564626?utm_medium=Cpc&utm_source=GP_PLA&IdSku=14564626&idLojista=10037&tipoLojista=1P&utm_campaign=ud_performance_max&gclid=CjwKCAjw9qiTBhBbEiwAp-GE0VlXDII-ZOXQMHU-Ed-3qsflpVI9hbG7VwpC4Sz5ODcF6_UJZ4sMUBoCepUQAvD_BwE" target="blank">
+                    <img src="./assets/img/conjunto-assadeiras.png" alt="">
+                    <div class="des">
+                        <h5>Conjunto de Assadeiras de Vidro</h5>
+                    </div>
+                </a>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/garrafa-termica.png" alt="">
-                <div class="des">
-                    <h5>Garrafa Térmica De Café</h5>
-                </div>
+                <a href="https://www.magazineluiza.com.br/jogo-conjunto-de-assadeiras-retangulares-altas-com-abas-03-pecas-aluminio-antiaderente-kit-ideal-para-sua-cozinha-marcolar/p/gb9c728gbg/ud/cjfa/" target="blank">
+                    <img src="./assets/img/jogo-conjunto-de-assadeiras.png" alt="">
+                    <div class="des">
+                        <h5>Jogo de Assadeiras</h5>
+                    </div>
+                </a>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/xicaras.png" alt="">
-                <div class="des">
-                    <h5>Jogo Xícaras e Pires De Café</h5>
-                </div>
+                <a href="https://www.precolandia.com.br/jogo-sobremesa-lisboa-13-pecas-tintinno/p-478679?gclid=CjwKCAjw9qiTBhBbEiwAp-GE0THoWQKmY8ThW4onaC3wWBdxiKP-jGc2EzxxXZOO7770Gn6RlPoMshoCmz4QAvD_BwE" target="blank">
+                    <img src="./assets/img/jogo-sobremesa.png" alt="">
+                    <div class="des">
+                        <h5>Jogo de Sobremesas de Vidro</h5>
+                    </div>
+                </a>
             </div>
 
             <div class="pro">
-                <img src="./assets/img/tacas-vinho.png" alt="">
-                <div class="des">
-                    <h5>Jogo de Taças para Vinho</h5>
-                </div>
+                <a href="https://now.westwing.com.br/jogo-de-xicaras-para-cha-em-ceramica-roma-06-pessoas-11989.html" target="blank">
+                    <img src="./assets/img/xicara-cha.png" alt="">
+                    <div class="des">
+                        <h5>Jogo de Xícaras de Chá</h5>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="pro-container">
+            <div class="pro">
+                <a href="https://www.shoptime.com.br/produto/127743039?pfm_carac=Jogo%20de%20Panelas&pfm_index=1&pfm_page=category&pfm_pos=grid&pfm_type=vit_product_grid" target="blank">
+                    <img src="./assets/img/jogo-panelas.png" alt="">
+                    <div class="des">
+                        <h5>Jogo de Panelas</h5>
+                    </div>
+                </a>
+            </div>
+
+            <div class="pro">
+                <a href="https://www.termolar.com.br/garrafa-termica-inox-lumina-1l-bomba-de-pressao" target="blank">
+                    <img src="./assets/img/garrafa-termica.png" alt="">
+                    <div class="des">
+                        <h5>Garrafa Térmica De Café</h5>
+                    </div>
+                </a>
+            </div>
+
+            <div class="pro">
+                <a href="https://www.oxfordporcelanas.com.br/serena-cream-jantar/p" target="blank">
+                    <img src="./assets/img/xicaras.png" alt="">
+                    <div class="des">
+                        <h5>Jogo Xícaras e Pires De Café</h5>
+                    </div>
+                </a>
+            </div>
+
+            <div class="pro">
+                <a href="https://www.magazineluiza.com.br/jogo-de-tacas-06-pecas-para-vinho-de-cristal-gastro-590ml-bohemia/p/dhggcgjh42/ud/tavi/" target="blank">
+                    <img src="./assets/img/tacas-vinho.png" alt="">
+                    <div class="des">
+                        <h5>Jogo de Taças para Vinho</h5>
+                    </div>
+                </a>
             </div>
         </div>
 
