Correção de imagens e links

--- a/eletroportateis.html
+++ b/eletroportateis.html
@@ -124,7 +124,7 @@
 
         <div class="pro-container">
             <div class="pro">
-                <a href="https://www.magazineluiza.com.br/cafeteira-espresso-tres-3-coracoes-passione-preto/p/023567000/ep/cfex/?&force=12&seller_id=magazineluiza&utm_source=google&utm_medium=&utm_campaign=-ft_pla-nc_coop_tres_coracoes_smart_pla_dia_das_maes_22-oc_venda&utm_content=-un_magalu-ce_b2c-cp_cooperados-bo_none-ts_&utm_term=66606&partner_id=66606" target="blank">
+                <a href="https://www.magazineluiza.com.br/cafeteira-nespresso-essenza-mini-branca/p/231230600/ep/cane/" target="blank">
                     <img src="./assets/img/cafeteira.png" alt="">
                     <div class="des">
                         <h5>Cafeteira de Cápsula</h5>
@@ -133,7 +133,7 @@
             </div>
 
             <div class="pro">
-                <a href="" target="blank">
+                <a href="//www.casasbahia.com.br/Eletroportateis/Mixer/mixer-electrolux-3-em-1-eib10-com-copo-e-batedor-de-claras-400w-preto-55033874.html?IdSku=55033875" target="blank">
                     <img src="./assets/img/mixer.png" alt="">
                     <div class="des">
                         <h5>Mixer</h5>
