--- a/moveis.html
+++ b/moveis.html
@@ -47,19 +47,10 @@
     <main id="main-outros">
         <div class="pro-container">
             <div class="pro">
-                <a href="https://www.magazineluiza.com.br/conjunto-sala-de-jantar-mesa-tampo-mdf-e-vidro-e-4-cadeiras-lottus-shopkasa/p/dg61gdj28a/mo/ms4j/" target="blank">
+                <a href="#">
                   <img src="./assets/img/mesa.png" alt="">
                   <div class="des">
                       <h5>Mesa De Jantar 4 Lugares</h5>
-                  </div>
-                </a>
-            </div>
-
-            <div class="pro">
-                <a href="" target="blank">
-                  <img src="./assets/img/sofa.png" alt="">
-                  <div class="des">
-                      <h5>Sofá Retrátil/Reclinável</h5>
                   </div>
                 </a>
             </div>
