--- a/utilitarios.html
+++ b/utilitarios.html
@@ -103,7 +103,7 @@
             </div>
 
             <div class="pro">
-                <a href="https://www.precolandia.com.br/jogo-sobremesa-lisboa-13-pecas-tintinno/p-478679?gclid=CjwKCAjw9qiTBhBbEiwAp-GE0THoWQKmY8ThW4onaC3wWBdxiKP-jGc2EzxxXZOO7770Gn6RlPoMshoCmz4QAvD_BwE" target="blank">
+                <a href="https://www.casasbahia.com.br/conjunto-de-tacas-para-sobremesa-hauskraft-transparente-em-vidro-12-cm-6-pecas/p/11997010" target="blank">
                     <img src="./assets/img/jogo-sobremesa.png" alt="">
                     <div class="des">
                         <h5>Jogo de Sobremesas de Vidro</h5>
@@ -141,7 +141,7 @@
             </div>
 
             <div class="pro">
-                <a href="https://www.oxfordporcelanas.com.br/serena-cream-jantar/p" target="blank">
+                <a href="https://www.amazon.com.br/XICARA-CAFE-PEARL-JG-12PC/dp/B091Z7CTT6/ref=asc_df_B091Z7CTT6/?tag=googleshopp00-20&linkCode=df0&hvadid=379715601072&hvpos=&hvnetw=g&hvrand=5663146029039021680&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001763&hvtargid=pla-1411560124298&psc=1" target="blank">
                     <img src="./assets/img/xicaras.png" alt="">
                     <div class="des">
                         <h5>Jogo Xícaras e Pires De Café</h5>
