--- a/moveis.html
+++ b/moveis.html
@@ -54,6 +54,15 @@
                   </div>
                 </a>
             </div>
+
+            <div class="pro">
+              <a href="#">
+                <img src="./assets/img/cabeceira_de_cama.png" alt="">
+                <div class="des">
+                    <h5>Cabeceira de Cama</h5>
+                </div>
+              </a>
+          </div>
         </div>
     </main>
 
