--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </nav>
     </header>
 
-    <main class="main-content" style="height: 80vh">
+    <main id="home-content" class="main-content">
       <div class="home-text">
         <p>Querido convidado seja bem-vindo a nossa lista de presentes.</p>
         <p>
