--- a/outros.html
+++ b/outros.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="pro">
-                <a href="https://artex.com.br/pr/kit-colcha-multi-mix-due/ARR30KCQZ7642?gclid=Cj0KCQjwvLOTBhCJARIsACVldV3fHt_ak0tTGHbrpS9iXu4h5EGakPKpIrWJ_GlpQkxma7teKk3e8tkaAhYbEALw_wcB">
+                <a href="https://artex.com.br/pr/kit-colcha-multi-mix-due/ARR30KCQZ7642?gclid=Cj0KCQjwvLOTBhCJARIsACVldV3fHt_ak0tTGHbrpS9iXu4h5EGakPKpIrWJ_GlpQkxma7teKk3e8tkaAhYbEALw_wcB" target="blank">
                   <img src="./assets/img/kit-colcha.png" alt="">
                   <div class="des">
                       <h5>Kit Colcha</h5>
