--- a/dados.html
+++ b/dados.html
@@ -40,20 +40,27 @@
               <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
             </li>
             <li>
-              <a href="./dados.html" class="nav-link">Dados bancários</a>
+              <a href="./dados.html" class="nav-link">Dados Pessoais</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
 
-    <section style="height: 100vh">
+    <section style="height: 100vh;">
       <i id="pix" class="fa-brands fa-pix"></i>
       <h2 id="pix-descricao">
         Pix: <span style="font-size: 2rem; color:black;">16 99415-0636</span>
       </h2>
-      <h2 id="pix-descricao">Tamiris P. De Almeida</h2>
+      <h2 style="margin-bottom: 100px;" id="pix-descricao">Tamiris P. De Almeida</h2>
+
+      <div style="text-align: center; font-size: 2rem; font-style: bold;" class="address">
+        <p>Endereço para entregas:</p>
+        <p>R. Paulo José da Palma, 619 - Alexandre Balbo</p>
+        <p>Ribeirão Preto - Sp / Cep: 14066-090</p>
+      </div>
     </section>
+
 
     <footer>
       <p>
