--- a/eletroportateis.html
+++ b/eletroportateis.html
@@ -37,7 +37,7 @@
                 <a href="./outros.html" class="nav-link">Cama, mesa e banho</a>
               </li>
               <li>
-                <a href="./dados.html" class="nav-link">Dados bancários</a>
+                <a href="./dados.html" class="nav-link">Dados Pessoais</a>
               </li>
             </ul>
           </div>
