--- a/eletroportateis.html
+++ b/eletroportateis.html
@@ -57,7 +57,7 @@
             </div>            
 
             <div class="pro">
-                <a href="https://www.magazineluiza.com.br/smart-tv-50-4k-uhd-nanocell-lg-50nano75-60hz-wi-fi-e-bluetooth-alexa-3-hdmi-2-usb/p/228863200/et/tv4k/" target="blank">
+                <a href="#">
                     <img src="./assets/img/tv_1.png" alt="">
                     <div class="des">
                         <h5>Smart Tv 50</h5>
