--- a/dados.html
+++ b/dados.html
@@ -47,13 +47,13 @@
       </nav>
     </header>
 
-    <section style="height: 100vh;">
+    <section class="section-dados" style="height: 100vh;">
       <h2 id="pix-descricao">
         Pix: <span style="font-size: 2rem; color:black;">16 99415-0636</span>
       </h2>
       <h2 style="margin-bottom: 100px;" id="pix-descricao">Tamiris P. De Almeida</h2>
 
-      <div style="text-align: center; font-size: 2rem; font-style: bold;" class="address">
+      <div class="address">
         <p>Endereço para entregas:</p>
         <p>R. Paulo José da Palma, 619 - Alexandre Balbo</p>
         <p>Ribeirão Preto - Sp / Cep: 14066-090</p>
