--- a/dados.html
+++ b/dados.html
@@ -56,7 +56,7 @@
       <div class="address">
         <p>Endereço para entregas:</p>
         <p>R. Paulo José da Palma, 619 - Alexandre Balbo</p>
-        <p>Ribeirão Preto - Sp / Cep: 14066-090</p>
+        <p>Ribeirão Preto - Sp <span id="barra-dados">/</span> <span id="cep">Cep: 14066-090</span></p>
       </div>
     </section>
 
