--- a/dados.html
+++ b/dados.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="format-detection" content="telephone=no">
     <title>Lista de Presentes</title>
 
     <link rel="stylesheet" href="./css/style.css" />
@@ -50,14 +49,14 @@
 
     <section class="section-dados" style="height: 100vh;">
       <h2 id="pix-descricao">
-        Pix: <a href="tel: 16 99415-0636" style="font-size: 2rem; color:black;">16 99415-0636</a>
+        Pix: <span style="font-size: 2rem; color:black;">16 99415-0636</span>
       </h2>
       <h2 style="margin-bottom: 100px;" id="pix-descricao">Tamiris P. De Almeida</h2>
 
       <div class="address">
         <p>Endereço para entregas:</p>
         <p>R. Paulo José da Palma, 619 - Alexandre Balbo</p>
-        <p>Ribeirão Preto - Sp <span id="barra-dados">/</span> <span id="cep">Cep: 14066-090</span></p>
+        <p>Ribeirão Preto - Sp / Cep: 14066-090</p>
       </div>
     </section>
 
