--- a/outros.html
+++ b/outros.html
@@ -44,6 +44,10 @@
         </nav>
       </header>
 
+      <div class="div-sugestivo">
+        <h1 class="sugestivo">Os Links são apenas sugestivos</h1>
+      </div>
+
     <main id="main-outros">
         <div class="pro-container">
             <div class="pro">
