Adicionando imagem de fundo

--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
     </header>
 
     <main id="home-content" class="main-content">
+
       <div class="home-text">
-        <p>Querido convidado seja bem-vindo a nossa lista de presentes.</p>
-        <p>
+        <p style="color:white;">Querido convidado seja bem-vindo a nossa lista de presentes.</p>
+        <p style="color: white;">
           Pensamos em tudo com muito carinho para que você se sinta feliz para
           nos presentear com o que sentir vontade.
         </p>
       </div>
 
-      <p style="text-align: center;">18 De Junho De 2022</p>
+      <p style="text-align: center; color:white;">18 De Junho De 2022</p>
     </main>
 
     <footer>
