removendo mais itens

--- a/eletroportateis.html
+++ b/eletroportateis.html
@@ -78,18 +78,18 @@
                 </a>
             </div>
 
-            <div class="pro-container">
-
-                <div class="pro">
-                    <a href="https://www.magazineluiza.com.br/ar-condicionado-split-samsung-digital-inverter-ultra-9000-btus-frio-220v-ar09tvhzdwknaz/p/ghc596dcc4/ar/arsp/?&seller_id=continentalcenter&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=65408&gclid=Cj0KCQjwmuiTBhDoARIsAPiv6L8VQrqQQzhGtVK07L4rZPPG9O5HkwviiC3Z1CtIbhG4nrjQ9vzCetcaAipKEALw_wcB&gclsrc=aw.ds" target="blank">
-                        <img src="./assets/img/ar-condicionado.png" alt="">
-                        <div class="des">
-                            <h5>Ar Condicionado Split</h5>
-                        </div>
-                    </a>
-                </div>
-
+            <div class="pro">
+                <a href="https://www.magazineluiza.com.br/ar-condicionado-split-samsung-digital-inverter-ultra-9000-btus-frio-220v-ar09tvhzdwknaz/p/ghc596dcc4/ar/arsp/?&seller_id=continentalcenter&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=65408&gclid=Cj0KCQjwmuiTBhDoARIsAPiv6L8VQrqQQzhGtVK07L4rZPPG9O5HkwviiC3Z1CtIbhG4nrjQ9vzCetcaAipKEALw_wcB&gclsrc=aw.ds" target="blank">
+                    <img src="./assets/img/ar-condicionado.png" alt="">
+                    <div class="des">
+                        <h5>Ar Condicionado Split</h5>
+                    </div>
+                </a>
+            </div>
+            
         </div>
+
+        <div class="pro-container"></div>
 
             <div class="pro">
                 <a href="https://www.casasbahia.com.br/purificador-de-agua-electrolux-pure4x-pe12g-cinza/p/55022717" target="blank">
