ajustando tela de eletroportateis

--- a/eletroportateis.html
+++ b/eletroportateis.html
@@ -86,10 +86,10 @@
                     </div>
                 </a>
             </div>
-            
+
         </div>
 
-        <div class="pro-container"></div>
+        <div class="pro-container">
 
             <div class="pro">
                 <a href="https://www.casasbahia.com.br/purificador-de-agua-electrolux-pure4x-pe12g-cinza/p/55022717" target="blank">
